--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BACKEND_URL=http://localhost:3000
+REACT_APP_BACKEND_URL=https://qq5t8z-3000.csb.app/
 PORT=3001
+REACT_APP_API_BASE_URL=https://qq5t8z-3000.csb.app/
